added case study (not completed yet)

--- a/draft/Makefile
+++ b/draft/Makefile
@@ -6,8 +6,8 @@ all:
 	latex $(TARGET)
 	latex $(TARGET)
 	dvips -t letter -o $(TARGET).ps $(TARGET).dvi
-	ps2pdf $(TARGET).ps
-	#dvipdf draft.dvi
+	#ps2pdf $(TARGET).ps
+	dvipdf draft.dvi
 
 clean:
 	rm -fr *~ *.out *.aux *.ps *.pdf *.dvi *.log *.bbl *.blg *.ent
